@@ -49,6 +49,8 @@ namespace gameswf
 			int sample_count, format_type format,
 			int sample_rate, bool stereo);
 
+		virtual void append_sound(int sound_handle, void* data, int data_bytes);
+
 		// Play the index'd sample.
 		virtual void	play_sound(int sound_handle, int loop_count);
 
@@ -157,6 +159,7 @@ namespace gameswf
 		}
 
 		int decode_mp3_data(int data_size, Uint8* data,	int* newsize, Uint8** newdata);
+		void append(void* data, int size, SDL_sound_handler* handler);
 		void play(int loops, SDL_sound_handler* handler);
 		bool mix(Uint8* stream, int len);
 
