@@ -1,3 +1,8 @@
+2007-03-20  Vitaly Alexeev <tishka92@yahoo.com>
+	
+	* a lot of files: 
+	added sound stream tag loaders & sound stream handler
+
 2007-03-18  Vitaly Alexeev <tishka92@yahoo.com>
 	
 	* gameswf/gameswf_sprite.cpp: fixed hitTest(),
